# HireComply

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: prompts.yaml  settings.py
data/sample_jds/: backend_engineer.json
docs/: COMPLIANCE.md
scripts/: run_pipeline.py
src/: __init__.py
src/agents/: recruitment_graph.py
src/models/: state.py
src/nodes/: bias_scanner.py  compliance_report.py  human_review.py  interview_gen.py  jd_parser.py  resume_screener.py
src/tools/: bias_detector.py  resume_parser.py
src/utils/: audit_logger.py  json_utils.py  llm_factory.py
tests/: test_bias_scanner.py  test_resume_parser.py
